# smartwright

./: .gitignore  AGENT.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: README.md  cli.md  debug-visual.md  dom-serializer.md  emergency-api.md  gravacao-e-replay.md  inicio-rapido.md  logging.md  modos-de-replay.md  multi-tab.md  network-learning.md  replay-adaptativo.md  run-json.md  stealth.md
examples/: basic_usage.py
smartwright/: __init__.py  _logging.py  cli.py  constants.py  exceptions.py  proxy.py  retry.py
smartwright/ai_recovery/: __init__.py  groq_provider.py  recovery.py
smartwright/api_executor/: __init__.py  executor.py
smartwright/captcha/: __init__.py  solver.py  twocaptcha.py
smartwright/core/: __init__.py  engine.py  models.py  store.py
smartwright/fingerprint/: __init__.py  tracker.py
smartwright/healing/: __init__.py  layer.py
smartwright/intent/: __init__.py  manager.py
smartwright/network_learning/: __init__.py  observer.py
smartwright/recorder/: __init__.py
smartwright/resolver/: __init__.py  _base.py  _capture.py  _content.py  _debug.py  _form.py  _helpers.py  _interact.py  _page.py  _replay.py  _response.py  _run_json.py  _session.py  _tabs.py  adaptive.py  adaptive_replay.py  dom_diff.py  dom_serializer.py  emergency.py  replay_mode.py
smartwright/semantic_finder/: __init__.py  finder.py
smartwright/stealth/: __init__.py
test_reais/: dom_explorer.py  formulario.py  github_trending.py  google_search.py  gravar_e_replay.py  multi_acoes.py  network_spy.py  sobre_os_bots.txt  wikipedia.py
tests/: test_smartwright_complete.py
